--- a/config/boards/shields/iqx3/iqx3.dtsi
+++ b/config/boards/shields/iqx3/iqx3.dtsi
@@ -19,6 +19,8 @@
 		label = "KSCAN";
 
 		diode-direction = "col2row";
+        wakeup-source;
+
 		col-gpios
 			= <&gpio0 13 GPIO_ACTIVE_HIGH>
 			, <&gpio0 20 GPIO_ACTIVE_HIGH>
@@ -38,6 +40,11 @@
 			, <&gpio0 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
 			;
 	};
+
+    soft_off_wakers {
+        compatible = "zmk,soft-off-wakeup-sources";
+        wakeup-sources = <&kscan0>;
+    };
 
 	default_transform: keymap_transform_0 {
 		compatible = "zmk,matrix-transform";
